# wallet_manager-backend

./: Cargo.toml  Dockerfile  README.md
config/abi/: disperse_collect.json
src/: main.rs
src/contracts/: disperse_collect.rs  erc20.rs  mod.rs  provider.rs
src/routes/: mod.rs
src/routes/token/: checks.rs  erc20_allowance.rs  erc20_approve.rs  erc20_balance_of.rs  erc20_transfer.rs  erc20_transfer_from.rs  mod.rs
src/routes/wallet/: collect_ether.rs  collect_token.rs  disperse_ether.rs  disperse_token.rs  mod.rs
src/routes/web3/: mod.rs  send_signed_transaction.rs
src/utils/: mod.rs  variables.rs  web3.rs
