[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.8.0"
actix-cors = "0.7.0"

# Asynchronous Programming
tokio = { version = '1.39.1', features = ["full"] }
once_cell = "1.19.0"

# Configuration
dotenv = "0.15.0"
serde_json = "1.0.120"
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }

# Web3
ethers = "2.0.14"
